--- a/pom.xml
+++ b/pom.xml
@@ -1,91 +1,95 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>fr.tlrx.elasticsearch</groupId>
-  <artifactId>elasticsearch-river-ldap</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>LDAP River for Elasticsearch</name>
-  <inceptionYear>2012</inceptionYear>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>fr.tlrx.elasticsearch</groupId>
+	<artifactId>elasticsearch-river-ldap</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>LDAP River for Elasticsearch</name>
+	<inceptionYear>2012</inceptionYear>
 
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-  <!-- <scm> <connection>scm:git:git@github.com:jprante/elasticsearch-river-jdbc.git</connection> <developerConnection>scm:git:git@github.com:jprante/elasticsearch-river-jdbc.git</developerConnection> 
-    <url>http://github.com/jprante/elasticsearch-river-jdbc</url> </scm> -->
-  <properties>
-    <elasticsearch.version>0.19.8</elasticsearch.version>
-    <github.global.server>github</github.global.server>
-  </properties>
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<scm>
+		<connection>scm:git:git@github.com:tlrx/elasticsearch-river-ldap.git</connection>
+		<developerConnection>scm:git:git@github.com:tlrx/elasticsearch-river-ldap.git</developerConnection>
+		<url>http://github.com/tlrx/elasticsearch-river-ldap</url>
+	</scm>
+	<properties>
+		<elasticsearch.version>0.19.8</elasticsearch.version>
+		<github.global.server>github</github.global.server>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.elasticsearch</groupId>
-      <artifactId>elasticsearch</artifactId>
-      <version>${elasticsearch.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    
-    <!-- Test dependencies -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.10</version>
-      <scope>test</scope>
-    </dependency>
+	<dependencies>
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>${elasticsearch.version}</version>
+			<scope>compile</scope>
+		</dependency>
 
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.14</version>
-      <scope>test</scope>
-    </dependency>
+		<!-- Test dependencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
 
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <version>1.5.10</version>
-      <scope>test</scope>
-    </dependency>
+		<dependency>
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>1.2.14</version>
+			<scope>test</scope>
+		</dependency>
 
-    <dependency>
-      <groupId>org.apache.directory.server</groupId>
-      <artifactId>apacheds-all</artifactId>
-      <version>1.5.7</version>
-      <scope>test</scope>
-    </dependency>  
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.5.10</version>
+			<scope>test</scope>
+		</dependency>
 
-    <dependency>
-      <groupId>org.apache.directory.server</groupId>
-      <artifactId>apacheds-server-integ</artifactId>
-      <version>1.5.7</version>
-      <scope>test</scope>
-    </dependency>  
+		<dependency>
+			<groupId>org.apache.directory.server</groupId>
+			<artifactId>apacheds-all</artifactId>
+			<version>1.5.7</version>
+			<scope>test</scope>
+		</dependency>
 
-    <dependency>
-      <groupId>org.apache.directory.server</groupId>
-      <artifactId>apacheds-core-integ</artifactId>
-      <version>1.5.7</version>
-      <scope>test</scope>
-    </dependency>  
+		<dependency>
+			<groupId>org.apache.directory.server</groupId>
+			<artifactId>apacheds-server-integ</artifactId>
+			<version>1.5.7</version>
+			<scope>test</scope>
+		</dependency>
 
-    <dependency>
-      <groupId>commons-io</groupId>
-      <artifactId>commons-io</artifactId>
-      <version>1.4</version>
-      <scope>test</scope>
-    </dependency>
+		<dependency>
+			<groupId>org.apache.directory.server</groupId>
+			<artifactId>apacheds-core-integ</artifactId>
+			<version>1.5.7</version>
+			<scope>test</scope>
+		</dependency>
 
-  </dependencies>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.4</version>
+			<scope>test</scope>
+		</dependency>
 
-  <repositories>
-    <repository>
-      <id>sonatype</id>
-      <name>Sonatype Groups</name>
-      <url>https://oss.sonatype.org/content/groups/public/</url>
-    </repository>
-  </repositories>
+	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>sonatype</id>
+			<name>Sonatype Groups</name>
+			<url>https://oss.sonatype.org/content/groups/public/</url>
+		</repository>
+	</repositories>
 </project>
 
