--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<groupId>fr.tlrx.elasticsearch</groupId>
 	<artifactId>elasticsearch-river-ldap</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>LDAP River for Elasticsearch</name>
-	<inceptionYear>2012</inceptionYear>
 
+	<properties>
+		<elasticsearch.version>0.19.8</elasticsearch.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	
 	<licenses>
 		<license>
 			<name>The Apache Software License, Version 2.0</name>
 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
 		</license>
 	</licenses>
+
+	<developers>
+		<developer>
+			<id>tlrx</id>
+			<name>Tanguy Leroux</name>
+			<email>tlrx.dev@gmail.com</email>
+		</developer>
+	</developers>
+
 	<scm>
 		<connection>scm:git:git@github.com:tlrx/elasticsearch-river-ldap.git</connection>
 		<developerConnection>scm:git:git@github.com:tlrx/elasticsearch-river-ldap.git</developerConnection>
 		<url>http://github.com/tlrx/elasticsearch-river-ldap</url>
 	</scm>
-	<properties>
-		<elasticsearch.version>0.19.8</elasticsearch.version>
-		<github.global.server>github</github.global.server>
-	</properties>
 
 	<dependencies>
 		<dependency>
@@ -76,6 +85,54 @@
 		</dependency>
 
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>2.8</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.2</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-scm-plugin</artifactId>
+				<version>1.5</version>
+			</plugin>
+			<plugin>
+				<groupId>com.github.github</groupId>
+				<artifactId>downloads-maven-plugin</artifactId>
+				<version>0.5</version>
+				<configuration>
+					<description>${project.name} build of the ${project.version} release</description>
+					<override>true</override>
+					<includeAttached>true</includeAttached>
+					<dryRun>false</dryRun>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>upload</goal>
+						</goals>
+						<phase>deploy</phase>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 
 	<repositories>
 		<repository>
