[maven-release-plugin] prepare release elasticsearch-river-ldap-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>fr.tlrx.elasticsearch</groupId>
 	<artifactId>elasticsearch-river-ldap</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>LDAP River for Elasticsearch</name>
 
 	<properties>
