--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>fr.tlrx.elasticsearch</groupId>
+    <groupId>com.github.tlrx</groupId>
 	<artifactId>elasticsearch-river-ldap</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 	<name>LDAP River for Elasticsearch</name>
+    <url>https://github.com/tlrx/elasticsearch-river-ldap</url>
+
+    <!-- Required for OSS maven repository deployment -->
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
 
 	<properties>
-		<elasticsearch.version>0.19.8</elasticsearch.version>
+		<elasticsearch.version>0.90.2</elasticsearch.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	
@@ -111,42 +119,17 @@
 				<artifactId>maven-scm-plugin</artifactId>
 				<version>1.5</version>
 			</plugin>
-			<plugin>
-				<groupId>com.github.github</groupId>
-				<artifactId>downloads-maven-plugin</artifactId>
-				<version>0.5</version>
-				<configuration>
-					<description>${project.name} build of the ${project.version} release</description>
-					<override>true</override>
-					<includeAttached>true</includeAttached>
-					<dryRun>false</dryRun>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>upload</goal>
-						</goals>
-						<phase>deploy</phase>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
 
-	<repositories>
-		<repository>
-			<id>sonatype</id>
-			<name>Sonatype Groups</name>
-			<url>https://oss.sonatype.org/content/groups/public/</url>
-		</repository>
-	</repositories>
-	
-	<distributionManagement>
-		<repository>
-			<id>github.repo</id>
-			<name>Local Temporary Repository</name>
-			<url>file:///tmp/github/repository/</url>
-		</repository>
-	</distributionManagement>
+
+    <distributionManagement>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <name>Nexus Staging Repository</name>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
+
 </project>
 
