--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.github.tlrx</groupId>
 	<artifactId>elasticsearch-river-ldap</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<name>LDAP River for Elasticsearch</name>
     <url>https://github.com/tlrx/elasticsearch-river-ldap</url>
 
